--- a/Friend Book/src/sample/sample.fxml
+++ b/Friend Book/src/sample/sample.fxml
@@ -2,14 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <TabPane prefHeight="411.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -29,14 +29,22 @@
                               <TextField fx:id="textGetLastName" promptText="Ex. Smith" />
                            </children>
                         </VBox>
-                        <Button layoutX="267.0" layoutY="190.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="138.0" text="Add Friend" />
+                        <Button layoutX="267.0" layoutY="190.0" mnemonicParsing="false" onAction="#addFriend" prefHeight="49.0" prefWidth="138.0" text="Add Friend" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
           <Tab text="Display friend">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ListView fx:id="friendList" layoutX="35.0" layoutY="24.0" onMouseClicked="#displayFriend" prefHeight="323.0" prefWidth="200.0" />
+                        <Label layoutX="379.0" layoutY="24.0" text="Friend Information" />
+                        <Label layoutX="339.0" layoutY="61.0" text="First Name:" />
+                        <Label layoutX="339.0" layoutY="94.0" text="Last Name:" />
+                        <Label fx:id="labelFirstName" layoutX="414.0" layoutY="61.0" />
+                        <Label fx:id="labelLastName" layoutX="414.0" layoutY="94.0" />
+                     </children></AnchorPane>
             </content>
           </Tab>
         </tabs>
